<resources>

    <string name="app_name">stream.json</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">stream.json</string>
    
    <!-- Placeholders -->
    <string name="acce"></string>
    <string name="video_title">Video Title</string>
    <string name="video_description">Video Description</string>
    <string name="no_video_selected">No Video Selected</string>
    <string name="server_loc_holder">192.186.10.14:4881</string>
    
    <string name="watch">Watch</string>
    <string name="server_url">Server Location</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="add_video">Add Video</string>
    
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="location_type">Location Type</string>
    <string name="poster_location">Poster Location</string>
    <string name="video_location">Video Location</string>
    <string name="description_format">Description Format</string>
    <string name="description">Description</string>
    
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    
    <string name="about">About</string>
    <string name="developed_by">Developed by</string>
    <string name="me">Nathan Campos</string>
    <string name="my_url">http://about.me/nathanpc</string>
    <string name="icon_by">Icon Design by</string>
    <string name="artist">Thrasos Varnava</string>
    <string name="art_link">http://www.iconarchive.com/show/slick-drives-icons-by-thvg/Movies-Drive-icon.html</string>
    <string name="artist_site">http://thvg.deviantart.com/</string>

</resources>