<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/server_url"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/server_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/server_loc_holder"
        android:inputType="textEmailAddress|textUri"
        android:singleLine="true" >

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login" />

</LinearLayout>