<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="350dp"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/detail_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp" >

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="230dp"
                android:layout_height="350dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/acce" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/poster_image"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@+id/poster_image"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/video_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/video_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:isScrollContainer="true"
                    android:text="@string/video_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/poster_image"
                android:layout_alignRight="@+id/poster_image"
                android:layout_below="@+id/poster_image"
                android:layout_marginTop="25dp"
                android:text="@string/watch" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/no_video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/no_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/no_video_selected"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>